add_library(lua STATIC
	lapi.c
	lbaselib.c
	lcorolib.c
	ldblib.c
	ldo.c
	lfunc.c
	linit.c
	llex.c
	lmem.c
	lobject.c
	loslib.c
	lstate.c
	lstrlib.c
	ltablib.c
	lundump.c
	lvm.c
	lauxlib.c
	lcode.c
	lctype.c
	ldebug.c
	ldump.c
	lgc.c
	liolib.c
	lmathlib.c
	loadlib.c
	lopcodes.c
	lparser.c
	lstring.c
	ltable.c
	ltm.c
	lutf8lib.c
	lzio.c
)
